--- a/src/pages/auth/register.css
+++ b/src/pages/auth/register.css
@@ -7,15 +7,6 @@
     padding: 20px;
   }
   
-  .form-box {
-    width: 100%;
-    max-width: 320px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
-  }
-  
   ion-input.input,
   ion-select.input {
     background: white;
@@ -29,17 +20,6 @@
   ion-button.register-button {
     --background: #4fcdfc;
     --border-radius: 8px;
-  }
-  
-  .login-link {
-    font-size: 14px;
-    margin-top: 10px;
-    text-align: center;
-  }
-  
-  .login-link span {
-    color: #4fcdfc;
-    cursor: pointer;
   }
 
   .register-container {
@@ -87,3 +67,14 @@
     cursor: pointer;
   }
   
+  .checkbox-item {
+    width: 100%;
+    max-width: 320px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 16px;
+    padding: 10px 15px;
+    display: flex;
+    align-items: center;
+  }
